--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -18,3 +18,29 @@ jobs:
         run: docker build -t ariefrahmansyah/test-github-actions:${{ github.sha }} .
       - name: "Push docker image"
         run: docker push ariefrahmansyah/test-github-actions:${{ github.sha }}
+
+  multi-services:
+    name: "Test multi services"
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12.4
+        env:
+          POSTGRES_DB: test
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test
+        ports:
+        - 5432:5432
+      keto:
+        image: oryd/keto:v0.4.3-alpha.2
+        env:
+          DSN: memory
+        ports:
+        - 4466:4466
+    steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v2
+      - name: "Check connection"
+        run: |
+          lsof -i :5432
+          lsof -i :4466
