--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -1,5 +1,5 @@
 name: workflow_dispatch
-on: [workflow_dispatch, pull_request]
+on: [workflow_dispatch]
 jobs:
   workflow_dispatch:
     runs-on: ubuntu-latest
